[gd_scene load_steps=32 format=3 uid="uid://dog2gmvrg7l26"]

[ext_resource type="Script" path="res://Script/player_new.gd" id="1_xdrbp"]
[ext_resource type="Script" path="res://Script/player_global.gd" id="2_2vd14"]
[ext_resource type="PackedScene" uid="uid://bba0nh4jkx4pk" path="res://Acéltüske (1).blend" id="3_3w7mo"]
[ext_resource type="Texture2D" uid="uid://cdgymmgclpf03" path="res://Textúra/disznó orr kilépés.png" id="3_qfluj"]
[ext_resource type="Texture2D" uid="uid://cehmb78g73gt0" path="res://Képernyőkép 2024-09-26 195508.png" id="4_3slmg"]
[ext_resource type="Texture2D" uid="uid://ci1rkxs7ncetu" path="res://Textúra/pewter-b.jpg" id="5_g4ime"]
[ext_resource type="Texture2D" uid="uid://kc1daqd2j23n" path="res://Textúra/fa_textura_1.png" id="6_fj4e7"]
[ext_resource type="Texture2D" uid="uid://dfw4x3jkd26kc" path="res://m_1.png" id="7_j7xjo"]
[ext_resource type="Script" path="res://addons/customizable-crosshair-lite/crosshair.gd" id="9_6axyu"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_rvbad"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_226ts"]
height = 1.089

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5ut8o"]

[sub_resource type="GDScript" id="GDScript_gwvao"]
script/source = "extends Node3D


var all_weapons = {}
var weapons = {}
var hud
var current_weapon
var current_weapon_slot = \"Üres\"
var changing_weapon = false
var unequipped_weapon = false"

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_r84lf"]
albedo_texture = ExtResource("4_3slmg")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b4pv1"]
albedo_texture = ExtResource("4_3slmg")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gm88h"]
albedo_texture = ExtResource("5_g4ime")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wmhns"]
albedo_texture = ExtResource("5_g4ime")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_godus"]
albedo_texture = ExtResource("4_3slmg")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fi2yl"]
albedo_texture = ExtResource("5_g4ime")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qjqn0"]
albedo_texture = ExtResource("4_3slmg")
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_e6jsv"]
albedo_texture = ExtResource("4_3slmg")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4623d"]
albedo_texture = ExtResource("6_fj4e7")
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fj2ms"]
albedo_texture = ExtResource("4_3slmg")

[sub_resource type="Animation" id="Animation_loprw"]
resource_name = "AcélTüske_eltétel"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Acéltüske (1):position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.06667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.385, 2.23, -0.492), Vector3(0.385, -1, -0.492)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Acéltüske (1):rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.46667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 3.14159, 0), Vector3(0, 3.14159, 1.69297)]
}

[sub_resource type="Animation" id="Animation_r5pxt"]
resource_name = "AcélTüske_elővétel"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Acéltüske (1):position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.533333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.385, -0.2, -0.492), Vector3(0.385, 2.23, -0.492)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Acéltüske (1):rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 3.14159, 1.69646), Vector3(0, 3.14159, 0)]
}

[sub_resource type="Animation" id="Animation_rto4n"]
resource_name = "AcélTüske_lövés"
length = 0.2
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Acéltüske (1):position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.103, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.385, 2.23, -0.492), Vector3(0.329367, 2.21012, -0.486313), Vector3(0.385, 2.23, -0.492)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Acéltüske (1):rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.104, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 3.14159, 0), Vector3(-0.506145, 3.14159, 0), Vector3(0, 3.14159, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Acéltüske (1)/MeshInstance3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.0224146, 0.216051, 0.696523), Vector3(0.0224146, 0.216051, 0.696523)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Acéltüske (1)/MeshInstance3D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.105, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(2.37148, 1.54209, 0.994454), Vector3(1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Acéltüske (1)/MeshInstance3D:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.037, 0.189),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_tesuw"]
resource_name = "AcélTüske_reload"
length = 1.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Acéltüske (1):position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.385, 2.23, -0.492)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Acéltüske (1):rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 1.05),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 3.14159, 0), Vector3(0, 3.14159, 1.213), Vector3(0, 3.14159, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Acéltüske (1)/fogantyú_001:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8, 1.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.00231814, -0.332957, -0.0651007), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_xrhtm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Acéltüske (1):position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Acéltüske (1):rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Acéltüske (1)/fogantyú_001:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Acéltüske (1)/MeshInstance3D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.0224146, 0.216051, 0.696523)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Acéltüske (1)/MeshInstance3D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Acéltüske (1)/MeshInstance3D:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rnjgl"]
_data = {
"AcélTüske_eltétel": SubResource("Animation_loprw"),
"AcélTüske_elővétel": SubResource("Animation_r5pxt"),
"AcélTüske_lövés": SubResource("Animation_rto4n"),
"AcélTüske_reload": SubResource("Animation_tesuw"),
"RESET": SubResource("Animation_xrhtm")
}

[sub_resource type="PlaneMesh" id="PlaneMesh_vo2i2"]
flip_faces = true
size = Vector2(0.5, 0.5)
orientation = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cdghb"]
transparency = 1
albedo_texture = ExtResource("7_j7xjo")
emission_enabled = true
emission = Color(0.54902, 0, 0, 1)
emission_energy_multiplier = 0.55

[node name="CharacterBody3D" type="CharacterBody3D"]
collision_layer = 257
collision_mask = 257
script = ExtResource("1_xdrbp")

[node name="Node3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.138574, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, 0)
visible = false
mesh = SubResource("CapsuleMesh_rvbad")
script = ExtResource("2_2vd14")

[node name="crouching" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.826797, 0)
shape = SubResource("CapsuleShape3D_226ts")

[node name="standing" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, 0)
shape = SubResource("CapsuleShape3D_5ut8o")

[node name="RayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(0, 3, 0)

[node name="nek" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0259522, 2.16187, 0.236975)

[node name="Pivot" type="Node3D" parent="nek"]

[node name="eyes" type="Node3D" parent="nek/Pivot"]

[node name="Camera3D" type="Camera3D" parent="nek/Pivot/eyes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0212737, 0.186101, -0.114441)
fov = 50.0
near = 0.5
far = 3000.0

[node name="weapon_manager" type="Node3D" parent="nek/Pivot/eyes/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0046785, -2.49756, -0.122534)
script = SubResource("GDScript_gwvao")

[node name="fps_rig" type="Node3D" parent="nek/Pivot/eyes/Camera3D/weapon_manager"]

[node name="Acéltüske (1)" parent="nek/Pivot/eyes/Camera3D/weapon_manager/fps_rig" instance=ExtResource("3_3w7mo")]
transform = Transform3D(0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 0, 0, 0)

[node name="célzó" parent="nek/Pivot/eyes/Camera3D/weapon_manager/fps_rig/Acéltüske (1)" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_r84lf")

[node name="Light" parent="nek/Pivot/eyes/Camera3D/weapon_manager/fps_rig/Acéltüske (1)" index="1"]
light_energy = 0.0

[node name="kakas" parent="nek/Pivot/eyes/Camera3D/weapon_manager/fps_rig/Acéltüske (1)" index="2"]
surface_material_override/0 = SubResource("StandardMaterial3D_b4pv1")

[node name="ravasztok" parent="nek/Pivot/eyes/Camera3D/weapon_manager/fps_rig/Acéltüske (1)" index="3"]
surface_material_override/0 = SubResource("StandardMaterial3D_gm88h")

[node name="ravasz" parent="nek/Pivot/eyes/Camera3D/weapon_manager/fps_rig/Acéltüske (1)" index="4"]
surface_material_override/0 = SubResource("StandardMaterial3D_wmhns")

[node name="_szellőző_" parent="nek/Pivot/eyes/Camera3D/weapon_manager/fps_rig/Acéltüske (1)" index="5"]
surface_material_override/0 = SubResource("StandardMaterial3D_godus")

[node name="*cső*" parent="nek/Pivot/eyes/Camera3D/weapon_manager/fps_rig/Acéltüske (1)" index="6"]
surface_material_override/0 = SubResource("StandardMaterial3D_fi2yl")

[node name="fegyvertok" parent="nek/Pivot/eyes/Camera3D/weapon_manager/fps_rig/Acéltüske (1)" index="7"]
surface_material_override/0 = SubResource("StandardMaterial3D_qjqn0")

[node name="alsóvonal" parent="nek/Pivot/eyes/Camera3D/weapon_manager/fps_rig/Acéltüske (1)" index="8"]
surface_material_override/0 = SubResource("StandardMaterial3D_e6jsv")

[node name="fogantyú" parent="nek/Pivot/eyes/Camera3D/weapon_manager/fps_rig/Acéltüske (1)" index="9"]
surface_material_override/0 = SubResource("StandardMaterial3D_4623d")

[node name="fogantyú_001" parent="nek/Pivot/eyes/Camera3D/weapon_manager/fps_rig/Acéltüske (1)" index="10"]
transform = Transform3D(0.0302061, -3.99847e-16, -3.33067e-15, -7.57281e-17, 0.159489, -1.02141e-14, 2.77556e-16, -4.44089e-15, 0.0792375, 0, 0, 0)
surface_material_override/0 = SubResource("StandardMaterial3D_fj2ms")

[node name="bullet_spawn" type="Node3D" parent="nek/Pivot/eyes/Camera3D/weapon_manager/fps_rig/Acéltüske (1)"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 1.42109e-14, 0, 1, 0, 0.190752, 0)

[node name="RayCast3D" type="RayCast3D" parent="nek/Pivot/eyes/Camera3D/weapon_manager/fps_rig/Acéltüske (1)/bullet_spawn"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0416974, 0.00676394, 0.702225)
target_position = Vector3(0, 0, 100)
collision_mask = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="nek/Pivot/eyes/Camera3D/weapon_manager/fps_rig/Acéltüske (1)"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_rnjgl")
}

[node name="MeshInstance3D" type="MeshInstance3D" parent="nek/Pivot/eyes/Camera3D/weapon_manager/fps_rig/Acéltüske (1)"]
transform = Transform3D(-0.976987, 0.203248, -0.0647031, 0.202804, 0.979127, 0.0134307, 0.0660823, -4.45172e-07, -0.997814, 0.0224146, 0.216051, 0.696523)
mesh = SubResource("PlaneMesh_vo2i2")
surface_material_override/0 = SubResource("StandardMaterial3D_cdghb")

[node name="barrel" type="Node3D" parent="nek/Pivot/eyes/Camera3D/weapon_manager/fps_rig/Acéltüske (1)"]
transform = Transform3D(1, 0, 4.54747e-13, 0, 1, 0, -4.54747e-13, 0, 1, 1.43051e-06, 0.226625, 0.573962)

[node name="Unarmed" type="Node3D" parent="nek/Pivot/eyes/Camera3D/weapon_manager/fps_rig"]
transform = Transform3D(-1, 0, 2.53518e-06, 0, 1, 0, -2.53518e-06, 0, -1, 0, 0, 0)

[node name="aim_raycast_end" type="Node3D" parent="nek/Pivot/eyes/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.399, -0.031, -20)

[node name="Button" type="Button" parent="."]
anchors_preset = -1
anchor_right = 0.004
anchor_bottom = 0.007
offset_left = 1746.0
offset_top = 4.0
offset_right = 3666.32
offset_bottom = 1084.44
scale = Vector2(0.09, 0.09)
shortcut_feedback = false
shortcut_in_tooltip = false
icon = ExtResource("3_qfluj")

[node name="weapon_manager" type="Node3D" parent="."]
script = SubResource("GDScript_gwvao")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -86.0
offset_top = -25.0
offset_right = -46.0
offset_bottom = 15.0

[node name="Label" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 852.0
offset_top = 839.0
offset_right = 1105.0
offset_bottom = 935.0
theme_override_font_sizes/font_size = 70
text = "HP: 100
"

[node name="Label2" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 743.0
offset_top = 985.0
offset_right = 1175.0
offset_bottom = 1081.0
theme_override_font_sizes/font_size = 70
text = "pisztoly"

[node name="Label4" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = -1
offset_left = 264.0
offset_top = 988.0
offset_right = 655.0
offset_bottom = 1084.0
theme_override_font_sizes/font_size = 70

[node name="Crosshair" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 45.0
offset_right = 45.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_6axyu")
crosshairThickness = 10.0
crosshairSize = 10.0
crosshairGap = 10.0
crosshairColor = Color(1, 1, 1, 1)
crosshairDot = true

[editable path="nek/Pivot/eyes/Camera3D/weapon_manager/fps_rig/Acéltüske (1)"]
